# langgraph-agentic-rag

./: .env_example  .gitignore  GEMINI.md  LICENSE  README.md  chroma.sqlite3  ingestion.py  main.py  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  TROUBLESHOOTING.md
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
